# repoanalyzer

./: .gitignore  CHATGPT_CONTEXT.md  ENVIRONMENT.txt  GIT_DIFF.patch  GIT_STATUS.txt  README.md  REPO_TREE.txt  memo.md  pyproject.toml
docs/: CODE_EVIDENCE_ENGINE_DESIGN.md  CPP_ANALYSIS_SCOPE.md  EVIDENCE_BUNDLE_SCHEMA.md  EVIDENCE_EVAL_SPEC.md  FREERTOS_PROBE_EVAL.md  FREERTOS_PROFILE_MATRIX.md  LLM_REPOANALYZER_USAGE_RULES.md  MCP_CONTRACT.md  MCP_TINYUSB_E2E.md  SAKURA_COMMAND_DISPATCH.md  SAKURA_CONFIG_PROFILE_IO.md  SAKURA_EXTENSION_EXECUTION.md  SAKURA_FILE_LOADING_ENCODING.md  SAKURA_PHASE7_CROSS_TRACE_EVAL.md  SAKURA_SNAPSHOT_GENERATOR.md  SAKURA_TRACEABILITY_REPORT.md  SAKURA_UI_RESOURCE_COMMAND_BINDING.md  SAKURA_UNDO_EDIT_TRACKING.md  SAKURA_UPSTREAM_CHECKOUT_SNAPSHOT_MODE.md  SAKURA_WINDOWS_MESSAGE_DIALOG_CALLBACK.md  TINYUSB_UPSTREAM_SMOKE_EVAL.md
repoanalyzer/: __init__.py  cli.py  config.py
tests/: test_cpp_basic_call.py  test_evidence_quality_gate.py  test_mcp_tools.py  test_phase5a_hardening.py  test_phase5b_incremental.py  test_phase5c_large_repo_hardening.py  test_phase6_extension.py  test_phase6_workflow.py  test_phase7_freertos_probe_suite.py  test_phase7_real_repo_eval.py  test_phase7_sakura_cross_trace_suite.py  test_phase7_sakura_snapshot_generator.py  test_phase7_tinyusb_hid_composite_probe_suite.py  test_phase7_tinyusb_host_probe_suite.py  test_phase7_tinyusb_mcp_e2e_contract.py  test_phase7_tinyusb_probe_suite.py  test_phase7_tinyusb_typec_pd_probe_suite.py  test_phase7_tinyusb_upstream_smoke_eval.py  test_sakura_command_dispatch.py  (+9 more)
(+331 files in other folders)
